// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`generate (configs list) generates the documentation 1`] = `
"# eslint-plugin-test

Description.

## Rules
<!-- begin auto-generated rules list -->

💼 Configurations enabled in.\\
🌐 Set in the \`all\` configuration.\\
✅ Set in the \`recommended\` configuration.\\
🎨 Set in the \`style\` configuration.\\
🔧 Automatically fixable by the [\`--fix\` CLI option](https://eslint.org/docs/user-guide/command-line-interface#--fix).\\
💡 Manually fixable by [editor suggestions](https://eslint.org/docs/latest/use/core-concepts#rule-suggestions).\\
💭 Requires [type information](https://typescript-eslint.io/linting/typed-linting).

| Name                           | Description            | 💼    | 🔧 | 💡 | 💭 |
| :----------------------------- | :--------------------- | :---- | :- | :- | :- |
| [no-bar](docs/rules/no-bar.md) | Description of no-bar. | 🌐 🎨 | 🔧 |    | 💭 |
| [no-baz](docs/rules/no-baz.md) | Description of no-baz. |       |    |    |    |
| [no-foo](docs/rules/no-foo.md) | Description of no-foo. | 🌐 ✅  | 🔧 | 💡 |    |

<!-- end auto-generated rules list -->
more content.
"
`;

exports[`generate (configs list) generates the documentation with --config-format 1`] = `
"# eslint-plugin-test

Description.

## Rules
<!-- begin auto-generated rules list -->

💼 Configurations enabled in.\\
🌐 Set in the \`test/all\` configuration.\\
✅ Set in the \`test/recommended\` configuration.\\
🎨 Set in the \`test/style\` configuration.\\
🔧 Automatically fixable by the [\`--fix\` CLI option](https://eslint.org/docs/user-guide/command-line-interface#--fix).\\
💡 Manually fixable by [editor suggestions](https://eslint.org/docs/latest/use/core-concepts#rule-suggestions).\\
💭 Requires [type information](https://typescript-eslint.io/linting/typed-linting).

| Name                           | Description            | 💼    | 🔧 | 💡 | 💭 |
| :----------------------------- | :--------------------- | :---- | :- | :- | :- |
| [no-bar](docs/rules/no-bar.md) | Description of no-bar. | 🌐 🎨 | 🔧 |    | 💭 |
| [no-baz](docs/rules/no-baz.md) | Description of no-baz. |       |    |    |    |
| [no-foo](docs/rules/no-foo.md) | Description of no-foo. | 🌐 ✅  | 🔧 | 💡 |    |

<!-- end auto-generated rules list -->
more content.
"
`;

exports[`generate (configs list) generates the documentation with --ignore-config 1`] = `
"# eslint-plugin-test

Description.

## Rules
<!-- begin auto-generated rules list -->

💼 Configurations enabled in.\\
🌐 Set in the \`all\` configuration.\\
✅ Set in the \`recommended\` configuration.\\
🔧 Automatically fixable by the [\`--fix\` CLI option](https://eslint.org/docs/user-guide/command-line-interface#--fix).\\
💡 Manually fixable by [editor suggestions](https://eslint.org/docs/latest/use/core-concepts#rule-suggestions).\\
💭 Requires [type information](https://typescript-eslint.io/linting/typed-linting).

| Name                           | Description            | 💼   | 🔧 | 💡 | 💭 |
| :----------------------------- | :--------------------- | :--- | :- | :- | :- |
| [no-bar](docs/rules/no-bar.md) | Description of no-bar. | 🌐   | 🔧 |    | 💭 |
| [no-baz](docs/rules/no-baz.md) | Description of no-baz. |      |    |    |    |
| [no-foo](docs/rules/no-foo.md) | Description of no-foo. | 🌐 ✅ | 🔧 | 💡 |    |

<!-- end auto-generated rules list -->
more content.
"
`;

exports[`generate (configs list) when a config description needs to be escaped in table generates the documentation 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

| Name                           | Description         |
| :----------------------------- | :------------------ |
| [no-foo](docs/rules/no-foo.md) | Description no-foo. |

<!-- end auto-generated rules list -->
## Configs
<!-- begin auto-generated configs list -->

|    | Name          | Description |
| :- | :------------ | :---------- |
| ✅  | \`recommended\` | Foo\\|Bar    |

<!-- end auto-generated configs list -->"
`;

exports[`generate (configs list) when a config exports a description property=description generates the documentation 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

| Name                           | Description            |
| :----------------------------- | :--------------------- |
| [no-foo](docs/rules/no-foo.md) | Description of no-foo. |

<!-- end auto-generated rules list -->
## Configs
  <!-- begin auto-generated configs list -->

|    | Name          | Description                              |
| :- | :------------ | :--------------------------------------- |
|    | \`foo\`         |                                          |
| ✅  | \`recommended\` | This config has the recommended rules... |

<!-- end auto-generated configs list -->"
`;

exports[`generate (configs list) when a config exports a description property=meta.description generates the documentation 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

| Name                           | Description            |
| :----------------------------- | :--------------------- |
| [no-foo](docs/rules/no-foo.md) | Description of no-foo. |

<!-- end auto-generated rules list -->
## Configs
  <!-- begin auto-generated configs list -->

|    | Name          | Description                              |
| :- | :------------ | :--------------------------------------- |
|    | \`foo\`         |                                          |
| ✅  | \`recommended\` | This config has the recommended rules... |

<!-- end auto-generated configs list -->"
`;

exports[`generate (configs list) when a config exports a description property=meta.docs.description generates the documentation 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

| Name                           | Description            |
| :----------------------------- | :--------------------- |
| [no-foo](docs/rules/no-foo.md) | Description of no-foo. |

<!-- end auto-generated rules list -->
## Configs
  <!-- begin auto-generated configs list -->

|    | Name          | Description                              |
| :- | :------------ | :--------------------------------------- |
|    | \`foo\`         |                                          |
| ✅  | \`recommended\` | This config has the recommended rules... |

<!-- end auto-generated configs list -->"
`;

exports[`generate (configs list) when all configs are ignored generates the documentation 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

| Name                           | Description            |
| :----------------------------- | :--------------------- |
| [no-foo](docs/rules/no-foo.md) | Description of no-foo. |

<!-- end auto-generated rules list -->
## Configs
<!-- begin auto-generated configs list -->
<!-- end auto-generated configs list -->"
`;

exports[`generate (configs list) when there are no configs generates the documentation 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

| Name                           | Description            |
| :----------------------------- | :--------------------- |
| [no-foo](docs/rules/no-foo.md) | Description of no-foo. |

<!-- end auto-generated rules list -->
## Configs
<!-- begin auto-generated configs list -->
<!-- end auto-generated configs list -->"
`;

exports[`generate (configs list) with configs not defined in alphabetical order generates the documentation 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

| Name                           | Description            |
| :----------------------------- | :--------------------- |
| [no-foo](docs/rules/no-foo.md) | Description of no-foo. |

<!-- end auto-generated rules list -->
## Configs
<!-- begin auto-generated configs list -->

|    | Name          |
| :- | :------------ |
|    | \`foo\`         |
| ✅  | \`recommended\` |

<!-- end auto-generated configs list -->"
`;
